# ogl-test

./: .gitignore  CMakeLists.txt  CMakeLists_glfw.txt  README.md
common/: helper.cpp  helper.h  shader.cpp  shader.h
shader/: SimpleFragmentShader.fsh  SimpleVertexShader.vsh  frag_03.fsh  frag_04.fsh  frag_05.fsh  frag_06.fsh  frag_09.fsh  frag_11.fsh  frag_12.fsh  frag_13.fsh  frag_16.fsh  text.fsh  text.vsh  vertex_03.vsh  vertex_04.vsh  vertex_05.vsh  vertex_06.vsh  vertex_09.vsh  vertex_11.vsh  vertex_12.vsh  vertex_13.vsh  vertex_16.vsh
src/: 01_first_window.cpp  02_red_triangle.cpp  03_shader_uniform.cpp  04_shader_vertex_attribute.cpp  05_matrix.cpp  06_colored_cube.cpp  07_primitives.cpp  08_texture_mapping.cpp  09_textured_cube.cpp  10_input_control.cpp  11_blender_model.cpp  12_vbo_index.cpp  13_transparency.cpp  14_basic_shading.cpp  15_text.cpp  16_normal_mapping.cpp  sdl_01_primitive.cpp  sdl_01_window.cpp
